Fix: div.table-container's 'overflow-x: scroll' to 'auto'.

--- a/theme/base.css
+++ b/theme/base.css
@@ -236,7 +236,7 @@ div.math {
 	overflow-x:		auto;
 }
 article div.table-container {
-	overflow-x:	scroll;
+	overflow-x:		auto;
 }
 
 /* フロートオブジェクト */
